--- a/paper/report.tex
+++ b/paper/report.tex
@@ -33,7 +33,7 @@
 \author[b,f,g]{Nour Skaf}
 \author[e]{Peter Tuthill}
 \affil[a]{Institute for Astronomy, University of Hawai'i,  640 N. Aohoku Pl., Hilo, HI 96720, USA}
-\affil[b]{National Observatory of Japan, Subaru Telescope, 650 N. Aohoku Pl., Hilo, HI 96720, USA}
+\affil[b]{Subaru Telescope, National Observatory of Japan, 650 N. Aohoku Pl., Hilo, HI 96720, USA}
 \affil[c]{Steward Observatory, University of Arizona, 933 N. Cherry Ave., Tucson, AZ 85721, USA}
 \affil[d]{Astrobiology Center, NINS, 2-21-1 Osawa, Mitaka, Tokyo 181-8588, Japan}
 \affil[e]{Sydney Institute for Astronomy, University of Sydney, Physics Rd., NSW 2006, Australia}
@@ -65,7 +65,7 @@ In the past few years, high-contrast instruments like SPHERE\cite{petit2014}, GP
 
 Despite the challenges of high-performance, diffraction-limited imaging at shorter wavelengths, there are significant motivations for extending high-contrast imaging into the visible. First is the detection of reflected light from exoplanets, which is considered the most promising method of imaging terrestrial planets\cite{traub2010}. Second, an important component of improving planet-formation theory is studying the birth of exoplanets in protoplanetary disks, which can be imaged using light reflected from small dust grains suspended in the gas disk. Such observations of protoplanetary disks complement radio imaging of the debris and probe smaller angles, better angular resolutions, and different grain chemistries than near-IR reflected light imaging. Lastly, using H$\alpha$ emission (\qty{656.28}{\nano\meter}) as a tracer for accretion allows direct imaging of matter in-flows onto forming exoplanets\cite{currie2022}, as well as studying matter out-flows in giant stars\cite{norris2020}.
 
-The Visible Aperture-Masking Polarimetric Interferometer/Imager for Resolving Exoplanetary Signatures (VAMPIRES)\cite{norris2015} is an optical dual-beam imager for the Subaru Coronagraphic Extreme Adaptive Optics (SCExAO) instrument on the Subaru telescope. A schematic of SCExAO/VAMPIRES is shown in \autoref{fig:bench}. VAMPIRES operates between \qtyrange{600}{800}{\nano\meter} with capabilities for polarimetric imaging\cite{norris2020}, H$\alpha$ imaging\cite{uyama2020}, and focal plane wavefront sensing\cite{vievard2020}. VAMPIRES also has a suite of non-redundant sparse aperture masks for sub-diffraction-limited interferometric imaging of stellar surfaces and outflows. For this work, though, we will focus on the traditional and polarimetric imaging modes.
+The Visible Aperture-Masking Polarimetric Imager/Interferometer for Resolving Exoplanetary Signatures (VAMPIRES)\cite{norris2015} is an optical dual-beam imager for the Subaru Coronagraphic Extreme Adaptive Optics (SCExAO) instrument on the Subaru telescope. A schematic of SCExAO/VAMPIRES is shown in \autoref{fig:bench}. VAMPIRES operates between \qtyrange{600}{800}{\nano\meter} with capabilities for polarimetric imaging\cite{norris2020}, H$\alpha$ imaging\cite{uyama2020}, and focal plane wavefront sensing\cite{vievard2020,vievard2022,deo2022}. VAMPIRES also has a suite of non-redundant sparse aperture masks for sub-diffraction-limited interferometric imaging. For this work, though, we will focus on the traditional and polarimetric imaging modes.
 
 VAMPIRES currently uses two Andor electron-multiplying (EM) CCDs for low read noise with framerates from \qtyrange{1}{100}{\hertz}. While these detectors perform very well in the photon-limited regime, the strong non-linearities and compressed dynamic range from electron multiplication makes imaging bright targets ($m^I < 7$) difficult. To address this problem, we have designed and deployed a classic Lyot coronagraph (CLC), which greatly attenuates the stellar point spread function (PSF), allowing the use of high EM gain without saturation. This is the primary motivation for building a coronagraph for VAMPIRES- avoiding saturation is key for CCD imaging, but this limits the off-axis signal-to-noise ratio (S/N). By attenuating the on-axis light, the off-axis signal can be increased without saturation from the stellar PSF, ultimately improving the S/N.
 
@@ -197,7 +197,7 @@ These bench contrast curves represent an unrealistic, ideal observing scenario. 
 
 We have not had any opportunities to use the coronagraph in good conditions for testing; most of our on-sky tests had $>$\ang{;;1.5} seeing. Our best data is from May 12, 2022, of target HIP 56083. We used a \qty{50}{\nano\meter} amplitude astrogrid with a separation of 15.5 $\lambda/D$, the same as our testbed data. An example coronagraphic image is shown in \autoref{fig:satellite-spots}b. We used 300 EM gain with 200 ms exposure times, median combining 100 frames for a total of \qty{20}{\second} of integration time. This caused significant blurring from seeing but was necessary to achieve a high signal-to-noise ratio (S/N). In the future, we want to investigate further the trade-off between S/N and sharpness from shorter exposure times on coronagraphic contrast.
 
-We constructed 5$\sigma$ contrast curves for each focal plane mask size following the same procedure as the testbed data (\autoref{fig:onsky-contrast}). Note for these observations we used a tighter field of view (256$\times$256) which limits the max separation to \ang{;;0.75}. We used the same scaling for the satellite spot photometry as fit from the testbed data ($10^{-1.52}$) and also masked out the satellite spots. At \ang{;;0.1}, all masks have a raw contrast around $10^{-2.5}$ and drop off to \num{e-4} at \ang{;;0.75}. The on-sky contrast is around an order of magnitude worse than the testbed data throughout the cropped \ang{;;0.75}$\times$\ang{;;0.75} FOV. We expect that under better observing conditions we could achieve many times better contrast performance with high S/N data aligned and stacked using lucky imaging for improved sharpness.
+We constructed 5$\sigma$ contrast curves for each focal plane mask size following the same procedure as the testbed data (\autoref{fig:onsky-contrast}). Note for these observations we used a tighter field of view (256$\times$256) which limits the max separation to \ang{;;0.75}. We used the same scaling for the satellite spot photometry as fit from the testbed data ($10^{-1.52}$) and also masked out the satellite spots. At \ang{;;0.1}, all masks have a raw contrast around $10^{-2.5}$ and drop off to \num{e-4} at \ang{;;0.75}. The on-sky contrast is around an order of magnitude worse than the testbed data throughout the cropped \ang{;;0.75}$\times$\ang{;;0.75} FOV. We expect that under better observing conditions we could achieve many times better contr/ast performance with high S/N data aligned and stacked using lucky imaging for improved sharpness.
 
 \begin{figure*}
    \centering
@@ -213,6 +213,8 @@ Four partially transmissive focal plane masks were installed with IWAs of \qtyli
 
 In the future, as wavefront control improves for SCExAO, we want to explore phase-based focal plane masks such as the four-quadrant phase mask (4QPM)\cite{rouanFourQuadrantPhase2007}. Phase-based masks offer improved contrast over amplitude-based designs like the classic Lyot style, but are highly sensitive to pointing errors and thus require fine tip-tilt control for effective use\cite{huby2017}. The fine tip-tilt control is expected to improve on SCExAO during the upgrades to the facility AO system, AO188\cite{minowa2010}. We are also interested in exploring apodized Lyot stops to achieve similar or improved performance in the presence of aberrations without sacrificing as much throughput.
 
+In addition to hardware improvements, we also look forward to making use of various speckle control algorithms which have been demonstrated with SCExAO for improving post-coronagraphic contrast. The ``DrWHO'' focal plane wavefront sensing algorithm\cite{skaf2021} reduces the effects of non-common path aberrations (NCPAs) between the wavefront sensor and VAMPIRES by altering the ideal reference used during wavefront correction. DrWHO has been demonstrated on-sky\cite{skaf2022} and coronagraphically in the near-IR\cite{skaf2021}. Another technique for improving post-coronagraphic contrast is spatial linear dark field control (LDFC), which uses electric field conjugation to remove NCPAs from one-half of the focal plane. LDFC has been demonstrated with the near-IR coronagraphs on SCExAO\cite{ahn2022}.
+
 %%%%% Appendix %%%%%
 
 \appendix    %>>>> this command starts appendixes
@@ -224,7 +226,7 @@ The code used for simulating the coronagraph (\autoref{sec:design}), reducing an
 
 \acknowledgments
 
-We wish to recognize and acknowledge the significant cultural role and reverence that the summit of Maunakea has always had within the indigenous Hawaiian community. We are most fortunate and thank the community for the privilege to conduct observations from this mountain. We would like to thank Paul Sumner for his useful advice during the construction of the Lyot stop and focal plane masks. We thank Jonathan Williams, Thayne Currie, and Timothy Brandt for generously offering observation time to use VAMPIRES for additional characterization of the coronagraph on-sky. This research was funded by the Heising-Simons Foundation through grant \#2020-1823. This work is based on data collected at the Subaru Telescope, which is operated by the National Astronomical Observatory of Japan. The development of SCExAO was supported by the Japan Society for the Promotion of Science (Grant-in-Aid for Research \#23340051, \#26220704, \#23103002, \#19H00703, and \#19H00695), the Astrobiology Center of the National Institutes of Natural Sciences, Japan, the Mt Cuba Foundation and the director's contingency fund at Subaru Telescope.
+We wish to recognize and acknowledge the significant cultural role and reverence that the summit of Maunakea has always had within the indigenous Hawaiian community. We are most fortunate and thank the community for the privilege to conduct observations from this mountain. We would like to thank Paul Sumner for his useful advice during the construction of the Lyot stop and focal plane masks. We thank Jonathan Williams, Thayne Currie, and Timothy Brandt for generously offering observation time to use VAMPIRES for additional characterization of the coronagraph on-sky. This research was funded by the Heising-Simons Foundation through grant \#2020-1823. This work is based on data collected at the Subaru Telescope, which is operated by the National Astronomical Observatory of Japan. The development of SCExAO is supported by the Japan Society for the Promotion of Science (Grant-in-Aid for Research \#23340051, \#26220704, \#23103002, \#19H00703, \#19H00695, and \#21H04998), the Subaru Telescope, the National Astronomical Observatory of Japan, the Astrobiology Center of the National Institutes of Natural Sciences, Japan, the Mt Cuba Foundation and the Heising-Simons Foundation.
 
 %%%%% References %%%%%
 
