--- a/paper/report.tex
+++ b/paper/report.tex
@@ -72,7 +72,7 @@ VAMPIRES currently uses two Andor electron-multiplying (EM) CCDs for low read no
 \begin{figure*}
    \centering
    \includegraphics[width=\textwidth]{figures/VAMPIRES_bench}
-   \caption{Schematic of SCExAO and VAMPIRES. The first two levels of SCExAO are shown in each box, with all unrelated components faded out. A dashed line outlines VAMPIRES on the visible bench.}\label{fig:bench}
+   \caption{Schematic of SCExAO and VAMPIRES. The first two levels of SCExAO are shown in each box, with all unrelated components faded out. A dashed line outlines VAMPIRES on the visible bench. The focal plane masks for the coronagraph are installed on the visible bench in the field stop (red rectangle, left) and the Lyot stop is installed in the pupil mask wheel (red rectangle, middle).}\label{fig:bench}
 \end{figure*}
 
 Furthermore, coronagraphy improves the detection sensitivity of circumstellar regions by controlling the stellar diffraction pattern. In other words, the coronagraph does not simply mask the central region of the image but rather attenuates the effects of the stellar PSF throughout the entire field of view (FOV). The diffraction control of a coronagraph is highly dependent on the quality of the incoming wavefront, though, necessitating the use of AO for high-contrast imaging. When combined with extreme AO, such as provided by SCExAO, a coronagraph can enable detections of sources many orders of magnitude fainter than their host stars ($\sim$\num{e-6})\cite{guyon2018}.
@@ -93,7 +93,7 @@ We used the open-source python package \texttt{HCIPy}\cite{por2018} for simulati
 
 The Lyot stop was modeled using a series of circular and rectangular apodizers with 0\% transmission. The stop design follows the shape of the SCExAO pupil with an undersized diameter and oversized obstructions. The outer diameter is 90\% the clear aperture diameter, the inner obstruction is 45\% the clear aperture diameter, the secondary support struts are 200\% their original width, and the bad deformable mirror probes are 150\% oversized. The ratio of areas of the Lyot stop and the SCExAO pupil is 63.7\%, and will theoretically widen the diffraction limit by 10\%. This final wavefront was propagated to the detector focal plane, forming the post-coronagraphic point-spread function.
 
-We repeated the above process for a series of wavelengths to approximate a broadband PSF. We summed the images produced with 10 wavefronts from \qtyrange{725}{775}{\nano\meter} to mimic the ``750-50'' filter (\qty{750}{\nano\meter} central wavelength with \qty{50}{\nano\meter} uniform bandpass). We chose this filter because at these wavelengths VAMPIRES has the highest throughput and best polarimetric efficiency. As an additional step, we generated many datasets with random tip and tilt errors sampled from a bivariate Gaussian with \qty{10}{\milliarcsecond} root-mean-square (RMS) jitter to test the coronagraph's resiliency to low-order wavefront errors. SCExAO typically has a higher RMS tip-tilt error than \qty{10}{\milliarcsecond}, which is closer to the 90th-percentile of on-sky performance. However, since VAMPIRES often operates in high-framerate lucky imaging mode, the effects of tip-tilt can be partially mitigated: the apparent movement of the focal plane mask will blur the edge, degrading sensitivity close in, but the rest of the FOV will be sharpened.
+We repeated the above process for a series of wavelengths to approximate a broadband PSF. We summed the images produced with 10 wavefronts from \qtyrange{725}{775}{\nano\meter} to mimic the ``750-50'' filter (\qty{750}{\nano\meter} central wavelength with \qty{50}{\nano\meter} uniform bandpass). We chose this filter because at these wavelengths VAMPIRES has the highest throughput and best polarimetric efficiency. As an additional step, we generated many datasets with random tip and tilt errors sampled from a bivariate Gaussian with \qty{10}{\milliarcsecond} root-mean-square (RMS) jitter to test the coronagraph's resiliency to tip-tilt jitter. SCExAO typically has a higher RMS tip-tilt error than \qty{10}{\milliarcsecond}, which is closer to the 90th-percentile of on-sky performance. However, since VAMPIRES often operates in high-framerate lucky imaging mode, the effects of tip-tilt can be partially mitigated: the apparent movement of the focal plane mask will blur the edge, degrading sensitivity close in, but the rest of the FOV will be sharpened.
 
 We evaluated the performance and quality of our simulations from the raw contrast curves of each mask \autoref{fig:sim-contrast}. These curves measure the noise in concentric annuli around the PSF. Each annulus is one full-width at half-maximum (FWHM) wide, and the noise is calculated using the biweight scale statistic, which is robust to outliers such as cosmic rays. The noise estimate also takes into account small-sample statistics\cite{mawet2014}, which bias the noise measured in annuli close to the PSF. We take the radial profile of this noise and normalize it to the non-coronagraphic PSF flux to determine the raw contrast, where we then apply a 5$\sigma$ detection threshold. For clarity, we describe all our contrast curves as ``raw'' since we never do PSF subtraction in this work. To create these contrast curves We used the open-source package \texttt{ADI.jl}\cite{lucas2020}.
 
@@ -177,7 +177,7 @@ Our first tests use the calibration source on SCExAO for determining the contras
 
 First, we took non-coronagraphic data allowing us to characterize the photometry and astrometry of the astrogrid speckles. For data reduction, we median-combined a series of 100 images and centered the frame using the satellite spots. For the astrogrid calibration, we used a hierarchical model of Moffat functions with shared shape and amplitude parameters. Around each PSF we measured the photometry using circular apertures with background subtraction from annular apertures. The relative photometry of the \qty{50}{\nano\meter} amplitude astrogrid was $10^{-1.52}$.
 
-Then we inserted the focal plane mask and Lyot stop and refocused. We median-combined a series of 100 images and centered using the satellite spots. We fit each satellite spot using a hierarchcical model of Moffat functions, again. We measured the photometry of each satellite spot using circular apertures with an annulus for background subtraction. The stellar flux was estimated from the median flux of the four satellite spots scaled by the relative photometry fit above ($10^{-1.52}$).
+Then we inserted the focal plane mask and Lyot stop and refocused. We median-combined a series of 100 images and centered using the satellite spots. We fit each satellite spot using a hierarchical model of Moffat functions, again. We measured the photometry of each satellite spot using circular apertures with an annulus for background subtraction. The stellar flux was estimated from the median flux of the four satellite spots scaled by the relative photometry fit above ($10^{-1.52}$).
 
 Lastly, we removed the focal plane mask and Lyot stop without adjusting the source brightness or exposure settings. It was paramount that we used 0 EM gain because our detectors saturated heavily without the coronagraph. We took another set of 100 frames, median-combined them, and centered using the satellite spots. All saturated pixels were masked before calculating the contrast, which was normalized using the source flux measured in the coronagraphic images because the satellite spots were partially saturated.
 
@@ -185,7 +185,7 @@ From here we created raw contrast curves the same way as in \autoref{sec:design}
 
 From the raw contrast curves (\autoref{fig:contrast}), we note similar performance between all the mask sizes. At \ang{;;0.1}, the coronagraph achieves a raw contrast of $\sim$ \num{e-3}, and background-limited contrast beyond $\sim$\ang{;;1} of $\sim$\num{e-5}. Throughout the entire FOV the coronagraphs attenuate the light by \numrange{0.2}{1} orders of magnitude, although the diffraction control falls off beyond \ang{;;1}.
 
-These bench contrast curves represent an unrealistic, ideal observing scenario. In particular, we let the detector saturate in order to take unocculted data with the same exposure settings we used with the coronagraph. This is not typical for on-sky observations, and cannot be done at all with EM gain, sacrificing the benefits of the EM process. For high S/N observations with the coronagraph, the limiting brightness will be the satellite spots. So, for example, with \qty{50}{\nano\meter} astrogrid we improve our background-limited contrast by $10^{1.52}$ compared to the same data taken without the coronagraph with the exposure setting adjusted to avoid saturation. Without using the astrogrid, the long-exposure limit will be reached when the speckle halo saturates, which offers $\sim$\num{e2} improved contrast, which means VAMPIRES can observe targets $\sim$100 times brighter than its current limits.
+These bench contrast curves represent an ideal observing scenario (i.e., high S/N, no seeing). The unocculted data is particularly unrealistic because we let the detector saturate to maintain the same exposure settings as the coronagraphic data. This is not typical for on-sky observations, and cannot be done at all with EM gain, sacrificing the benefits of the EM process. For high S/N observations with the coronagraph, the limiting brightness will be the satellite spots. So, for example, with \qty{50}{\nano\meter} astrogrid we improve our background-limited contrast by $10^{1.52}$ compared to the same data taken without the coronagraph with the exposure setting adjusted to avoid saturation. Without using the astrogrid, the long-exposure limit will be reached when the speckle halo saturates, which offers $\sim$\num{e2} improved contrast, which means VAMPIRES can observe targets $\sim$100 times brighter than its current limits.
 
 \begin{figure*}
    \centering
