update affiliations and acknowledgements

--- a/paper/report.tex
+++ b/paper/report.tex
@@ -24,21 +24,22 @@
 
 \author[a,*]{Miles Lucas}
 \author[a]{Michael Bottom}
-\author[b,c,d]{Olivier Guyon}
+\author[b,c,d,e]{Olivier Guyon}
 \author[b]{Julien Lozi}
-\author[e]{Barnaby Norris}
+\author[f]{Barnaby Norris}
 \author[b]{Vincent Deo}
-\author[b]{S\'ebastien Vievard}
+\author[b,d]{S\'ebastien Vievard}
 \author[b]{Kyohoon Ahn}
-\author[b,f,g]{Nour Skaf}
-\author[e]{Peter Tuthill}
+\author[b,g,h]{Nour Skaf}
+\author[f]{Peter Tuthill}
 \affil[a]{Institute for Astronomy, University of Hawai'i,  640 N. Aohoku Pl., Hilo, HI 96720, USA}
 \affil[b]{Subaru Telescope, National Observatory of Japan, 650 N. Aohoku Pl., Hilo, HI 96720, USA}
-\affil[c]{Steward Observatory, University of Arizona, 933 N. Cherry Ave., Tucson, AZ 85721, USA}
+\affil[c]{Steward Observatory, University of Arizona, }
 \affil[d]{Astrobiology Center, NINS, 2-21-1 Osawa, Mitaka, Tokyo 181-8588, Japan}
-\affil[e]{Sydney Institute for Astronomy, University of Sydney, Physics Rd., NSW 2006, Australia}
-\affil[f]{LESIA, Observatoire de Paris, Univ.~PSL, CNRS, Sorbonne Univ., Univ.~de Paris, 5 pl. Jules Janssen, 92195 Meudon, France}
-\affil[g]{Department of Physics and Astronomy, University College London, London, United Kingdom}
+\affil[e]{College of Optical Sciences, University of Arizona, 933 N. Cherry Ave., Tucson, AZ 85721, USA}
+\affil[f]{Sydney Institute for Astronomy, University of Sydney, Physics Rd., NSW 2006, Australia}
+\affil[g]{LESIA, Observatoire de Paris, Univ.~PSL, CNRS, Sorbonne Univ., Univ.~de Paris, 5 pl. Jules Janssen, 92195 Meudon, France}
+\affil[h]{Department of Physics and Astronomy, University College London, London, United Kingdom}
 
 \authorinfo{Further author information: (Send correspondence to M.L.)\\M.L.: E-mail: mdlucas@hawaii.edu}
 
@@ -226,7 +227,7 @@ The code used for simulating the coronagraph (\autoref{sec:design}), reducing an
 
 \acknowledgments
 
-We wish to recognize and acknowledge the significant cultural role and reverence that the summit of Maunakea has always had within the indigenous Hawaiian community. We are most fortunate and thank the community for the privilege to conduct observations from this mountain. We would like to thank Paul Sumner for his useful advice during the construction of the Lyot stop and focal plane masks. We thank Jonathan Williams, Thayne Currie, and Timothy Brandt for generously offering observation time to use VAMPIRES for additional characterization of the coronagraph on-sky. This research was funded by the Heising-Simons Foundation through grant \#2020-1823. This work is based on data collected at the Subaru Telescope, which is operated by the National Astronomical Observatory of Japan. The development of SCExAO is supported by the Japan Society for the Promotion of Science (Grant-in-Aid for Research \#23340051, \#26220704, \#23103002, \#19H00703, \#19H00695, and \#21H04998), the Subaru Telescope, the National Astronomical Observatory of Japan, the Astrobiology Center of the National Institutes of Natural Sciences, Japan, the Mt Cuba Foundation and the Heising-Simons Foundation.
+We wish to recognize and acknowledge the significant cultural role and reverence that the summit of Maunakea has always had within the indigenous Hawaiian community. We are grateful and thank the community for the privilege to conduct observations from this mountain. We would like to thank Paul Sumner for his useful advice during the construction of the Lyot stop and focal plane masks. We thank Jonathan Williams, Thayne Currie, and Timothy Brandt for generously offering observation time to use VAMPIRES for additional characterization of the coronagraph on-sky. This research was funded by the Heising-Simons Foundation through grant \#2020-1823. N.S. and V.D. acknowledge support from NASA (Grant \#80NSSC19K0336). This work is based on data collected at the Subaru Telescope, which is operated by the National Astronomical Observatory of Japan. The development of SCExAO is supported by the Japan Society for the Promotion of Science (Grant-in-Aid for Research \#23340051, \#26220704, \#23103002, \#19H00703, \#19H00695, and \#21H04998), the Subaru Telescope, the National Astronomical Observatory of Japan, the Astrobiology Center of the National Institutes of Natural Sciences, Japan, the Mt Cuba Foundation and the Heising-Simons Foundation.
 
 %%%%% References %%%%%
 
