--- a/paper/report.tex
+++ b/paper/report.tex
@@ -49,7 +49,7 @@
 %%%%% Abstract %%%%%
 
 \begin{abstract}
-   We describe the design and initial results from a visible-light Lyot coronagraph for SCExAO/VAMPIRES. The coronagraph is comprised of four hard-edged, partially transmissive focal plane masks with inner working angles of \qtylist{36;55;92;129}{\milliarcsecond}, respectively. The Lyot stop is a reflective, undersized design with a relative throughput of 65.7\%. Our preliminary on-sky contrast is \num{e-2} at \ang{;;0.1} to \num{e-4} at \ang{;;0.75} for all mask sizes. The coronagraph was deployed in early 2022 and is available for open use.
+   We describe the design and initial results from a visible-light Lyot coronagraph for SCExAO/VAMPIRES. The coronagraph is comprised of four hard-edged, partially transmissive focal plane masks with inner working angles of \qtylist{36;55;92;129}{\milliarcsecond}, respectively. The Lyot stop is a reflective, undersized design with a geometric throughput of 65.7\%. Our preliminary on-sky contrast is \num{e-2} at \ang{;;0.1} to \num{e-4} at \ang{;;0.75} for all mask sizes. The coronagraph was deployed in early 2022 and is available for open use.
 \end{abstract}
 
 %%%%% Keywords %%%%%
